Added "Any Key" capability and fixed HTML tests.
Adding the capability to have a default key press handler under the
Ket.Any and modified the test suite to use the latest unittest
conventions from the Dart team.

--- a/test/okeyee_test.html
+++ b/test/okeyee_test.html
@@ -2,21 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+<title>Okeyee Test Suite</title>
 </head>
 <body>
 <script type="application/dart" src="okeyee_test.dart"></script>
 <script type='text/javascript'>
-    var testRunner = window.testRunner || window.layoutTestController;
-    if (testRunner) {
-      function handleMessage(m) {
-        if (m.data == 'done') {
-          testRunner.notifyDone();
-        }
-      }
-      testRunner.waitUntilDone();
-      window.addEventListener("message", handleMessage, false);
-    }
 </script>
 <script src="packages/browser/dart.js"></script>
 </body>
